# ha_groq_integration

./: .gitignore  AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml
.agent/rules/: git-workflow.md  tech-stack.md
.agent/workflows/: pr-submit.md  release.md
.github/workflows/: pre-release.yml  release.yml
custom_components/groq_cloud_conversation/: __init__.py  ai_task.py  api.py  config_flow.py  const.py  conversation.py  diagnostics.py  entity.py  manifest.json  model_registry.py  runtime.py  services.py  services.yaml  strings.json  stt.py  tts.py
custom_components/groq_cloud_conversation/translations/: de.json  en.json
tests/: __init__.py  conftest.py  test_ai_task.py  test_api.py  test_config_flow.py  test_conversation.py  test_diagnostics.py  test_entity.py  test_init.py  test_services.py  test_stt.py  test_tts.py
