[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0.0"]

[project]
name = "ha-groq-cloud-conversation"
version = "0.2.0"
description = "Home Assistant custom integration for Groq Cloud conversation, AI tasks, speech-to-text, and text-to-speech."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Michael Bieber" },
]
keywords = [
  "groq",
  "home-assistant",
  "home-assistant-custom-integration",
  "llm",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "homeassistant>=2026.6.0",
]

[project.urls]
Homepage = "https://github.com/ignazhabibi/ha_groq_integration"
Issues = "https://github.com/ignazhabibi/ha_groq_integration/issues"
Repository = "https://github.com/ignazhabibi/ha_groq_integration"

[project.optional-dependencies]
dev = [
  "ha-ffmpeg==3.2.2",
  "hassil==3.8.0",
  "home-assistant-intents==2026.6.1",
  "mutagen==1.47.0",
  "mypy>=1.18.0",
  "PyTurboJPEG==1.8.3",
  "pytest-homeassistant-custom-component>=0.13.300",
  "ruff>=0.14.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "C901",
  "COM812",
  "D203",
  "D213",
  "EM101",
  "EM102",
  "FBT001",
  "FBT002",
  "PLR0912",
  "TC001",
  "TC002",
  "TC003",
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "SLF001"]

[tool.mypy]
explicit_package_bases = true
files = ["custom_components", "tests"]
mypy_path = "."
python_version = "3.14"
show_error_codes = true
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "homeassistant.*",
  "pytest_homeassistant_custom_component.*",
  "voluptuous_openapi.*",
]
ignore_missing_imports = true
